# Smart_Recycling_AI

./: .gitignore  Dockerfile.mlflow  README.md  docker-compose.yaml  pyproject.toml
src/smart_recycling/: __init__.py
src/smart_recycling/notebooks/: experiment_utils.ipynb  experiments_config.py  run_experiments.ipynb
src/smart_recycling/utils/: __init__.py
src/smart_recycling/utils/etl/: get_datasets.py  split_folder.py
src/smart_recycling/utils/logging/: __init__.py
src/smart_recycling/utils/model_evaluation/: save_confusion_matrix.py  save_model_history.py  save_prediction_time.py  save_predictions_csv.py
src/smart_recycling/utils/model_training/: compute_class_weights.py
