[project]
name = "smart-recycling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Niels", email = "niels.scholz01@web.de" }
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "mlflow>=3.4.0",
    "seaborn>=0.13.2",
    "split-folders>=0.5.1",
    "tensorflow[and-cuda]>=2.20.0",
]

[project.scripts]
smart-recycling = "smart_recycling:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
